Intermediate Exercise (Abdullah)

--- a/Abdullah/Intermediate Exercise/index.html
+++ b/Abdullah/Intermediate Exercise/index.html
@@ -5,13 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Day 6</title>
+    <style>
+      body {
+        background: rgb(44, 88, 194);
+        background: linear-gradient(
+          90deg,
+          rgba(44, 88, 194, 1) 0%,
+          rgba(56, 203, 245, 1) 86%
+        );
+      }
+
+      table {
+        font-family: arial, sans-serif;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+        height: 500px;
+      }
+
+      th, tr{
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+
+      td {
+        padding: 8px 4px;
+      }
+
+      tr:nth-child(even) {
+        background-color: #efeeeea7;
+        height: 30px;
+      }
+    </style>
   </head>
   <body>
     <h1>Intermediate Exercise</h1>
 
-    <div id="demo"></div>
+    <table>
+      <thead>
+        <tr>
+          <th>Unique ID</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email Address</th>
+          <th>Job Title</th>
+          <th>Salary</th>
+        </tr>
+      </thead>
+      <tbody id="demo"></tbody>
+    </table>
 
-    <script src="data.json"></script>
-    <script src="../Intermediate Exercise/scripts/script.js"></script>
+    <script src="scripts/data.json"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
